syntax = "proto2";
package PROTOBUF;

// 登录验证用户
message PB_LoginAuthUser
{
	optional uint32 role_id			= 1;
	optional uint32 role_kind 		= 2;
	optional string client_host		= 3;
	optional string client_token	= 4;
}

// 用户登录
message PB_UserLogin
{
	optional uint32 role_id				= 1;
	optional uint32 role_kind			= 2;
	optional uint32 frontend_service_id	= 3;
	optional uint32 game_service_id		= 4;
	optional string client_host			= 5;
}
